Implementación de Los Videos Presentados en Formación en la Tabla Usuario o Default.
1. se añadio al diccionario nuevas palabras puestro que todo el framework debe ir con uso del diccionario.
2. las palabras "Editar", "Modificar", "Eliminar", de manera quemada desaparecen ya son llamadas desde el i18n o mejor dicho el Diccionario.
3.Uso de Ajax en Eliminar Sencillo.
4.Cambio en el routing en formato de salida del Eliminar.
5. aparece un nuevo archivo en VIEW llamado deleteTemplate.json.php.
6. se borra el pasado eliminar en el index.js que esta en la carpeta web/js.
7. se incluye base de datos en postgresql en extension .backup.

--- a/config/routing.yml
+++ b/config/routing.yml
@@ -85,7 +85,7 @@ default_update:
 
 default_delete:
   url:    /usuario/eliminar
-  param:  { module: default, action: delete, format: html }
+  param:  { module: default, action: delete, format: json }
   load:
     - model/base/usuarioBaseTableClass.php
     - model/usuarioTableClass.php
