Implementación de Los Videos Presentados en Formación en la Tabla Tipo Empaque.
1.Cambio en el routing en formato de salida del Eliminar.
2. se agrego Titulo a la Tabla en el View.
2. aparece un nuevo archivo en VIEW llamado deleteTemplate.json.php.
3. nuevo mensaje de actualizacion exitosa en el diccionario y en el archivo updateActionClass.

--- a/config/routing.yml
+++ b/config/routing.yml
@@ -148,7 +148,7 @@ tipoEmpaque_update:
 
 tipoEmpaque_delete:
   url:    /tipoEmpaque/eliminar
-  param:  { module: tipoEmpaque, action: delete, format: html }
+  param:  { module: tipoEmpaque, action: delete, format: json }
   load:
     - model/base/tipoEmpaqueBaseTableClass.php
     - model/tipoEmpaqueTableClass.php
